# picsim

./: .gitmodules  AUTHORS  ChangeLog  ChangeLog.0  Makefile.am  NEWS  README  TODO  configure.ac  configure.cmd  makelinks.sh.in
config/sites/: f14_ia32_ifort+mpich2+skin_optim_jazz2  f14_ia32_ifort+mpich2_optim_jazz2  f14_ia32_ifort_optim_jazz2  f16_x86_64_ifort_optim_jazz2  f19_x86_64_ifort_optim_jazz3  f26_x86_64_clang+mpich_optim_jazz4  f26_x86_64_clang_optim_jazz4  f26_x86_64_gcc_optim_jazz4  f29_x86_64_gcc_optim_jazz4  f29_x86_64_pgc++_optim_jazz4  f31_x86_64_gcc_optim_jazz3  f31_x86_64_gcc_optim_jazz4  f32_x86_64_gcc_optim_jazz5  f38_x86_64_gcc+openmpi_optim_jazz6  fc24_x86_64_ifort+mpich_optim_jazz3  fermi_mpixlcxx_cineca  fermi_mpixlcxx_optim_cineca  plx_icpc+mpiCC+skin_cineca  plx_icpc+mpiCC_cineca  plx_icpc_cineca  rh5.9_x86_64_ifort_optim_phalanx  sl6.0_x86_64_ifort_optim_phalanx  sp6_xlC+mpCC+skin_cineca  sp6_xlC+mpCC_cineca  sp6_xlC+mpCC_optim_cineca  sp6_xlC_cineca
doc/: Makefile.am  energy2d.m  energy3d.m  kinetic.m  pic_cycle.fig  pic_grid.fig  picsim.tex  startup.m  version.sty.in
doc/doxygen/: Doxyfile.in
lib/: Makefile.am
matlab/: E.m  F.m  Makefile.am  N.m  P.m  R.m  U.m  backgrd_bnd.m  backgrd_const.m  backgrd_def.m  backgrd_init.m  backgrd_par_parsing.m  beam_bnd.m  beam_def.m  beam_init.m  beam_par_parsing.m  beam_stat.m  beam_test_seff1d.m  checkperturb.m  dipoleMagneticEquiPotential.m  dipoleMagneticField.m  dipoleMagneticPotential.m  field_plot.m  field_to_particles.m  findfrq.m  findkxky.m  fluxCDF.m  hydrostatic.m  ishdf.m  makemovie2d.m  makemovie2d2field.m  makemovie3d.m  makemovie3yfxz.m  makemovieslicer.m  makemovieyfxz.m  mdipole.m  mirror.m  mirrorMachine.m  particles_bnd.m  particles_mover.m  (+59 more)
matlab/@single/: eq.m  ge.m  gt.m  le.m  lt.m  minus.m  mtimes.m  plus.m  times.m
share/: 2beam2d.conf  Makefile.am  beam2d_test1.conf  beam3d_test1.conf  beam3d_test2.conf  bi-ion2d.conf  burst_beam2d.conf  daldorff_alpha_et_al.conf  daldorff_alpha_et_al.conf4p  daldorff_et_al.conf  drift2d.conf  drift2d.conf3p  drift3d.conf  drift3d.conf3p  drift3d.conf4p  drift3d.conf8p  dust1_2d.conf  dust1_3d.conf  dust2_2d.conf  dust2_3d.conf  dust3_2d.conf  dust3_3d.conf  dust4_2d.conf  dust4_3d.conf  dustobs_2d.conf  dustobs_3d.conf  fb0vacuum2d.conf  fb0vacuum3d.conf  fb1vacuum2d.conf  fb1vacuum3d.conf  gravity_beam2d.conf  gravity_check.conf  gravity_check2.conf  gravity_is2d.conf  gravity_pulse2d.conf  gravity_wave2d.conf  gravity_wave2d2.conf  gravity_wave3d.conf  guio_et_al2000fig11.conf  guio_et_al2000fig6.conf  (+52 more)
share/templates/: Backgrd.conf  Beam.conf  Diagnostics.conf  DrivenBackgrd.conf  Hdf.conf  Makefile.am  NumberGenerator.conf  PicSim.conf  PoissonBoltzmannSolver.conf  PotentialProbe.conf  Scheduler.conf  Spectra.conf
src/: Makefile.am  backgrd.cpp  backgrd.h  bbeam.cpp  bbeam.h  beam.cpp  beam.h  diagnostics.cpp  diagnostics.h  drivenbackgrd.cpp  drivenbackgrd.h  drivennonhombackgrd.cpp  drivennonhombackgrd.h  generic-es-picsim.cpp  generic-es-picsim.h  generic-picsim.cpp  generic-picsim.h  moments-handler.cpp  moments-handler.h  moments.cpp  moments.h  nonhombackgrd.cpp  nonhombackgrd.h  pdf.cpp  pdf.h  phase-space-handler.cpp  phase-space-handler.h  phase-space.cpp  phase-space.h  picsim-debug.h  picsim-defs.h  picsime.cpp  picsime.h  picsimei.cpp  picsimei.h  picsimi.cpp  picsimi.h  probes-handler.cpp  probes-handler.h  probes.cpp  (+17 more)
tests/: Blitz.cpp  Deque.cpp  FactorySpecies.cpp  Fftw.cpp  List.cpp  Makefile.am  Map.cpp  Pdf.cpp  Picsim.cpp.in  Picsime.cpp  Picsimei.cpp  Picsimi.cpp  Slist.cpp  Vector.cpp  bench_container.sh.in  kh2dgrowth.sh.in  testMT1.cpp  testMT2.cpp  testRNG.cpp
