
matlabdir = $(prefix)/matlab
matlab_DATA = backgrd_bnd.m backgrd_const.m backgrd_def.m backgrd_init.m \
backgrd_par_parsing.m beam_bnd.m beam_def.m beam_init.m beam_par_parsing.m \
beam_stat.m checkperturb.m E.m field_plot.m field_to_particles.m findfrq.m \
findkxky.m fluxCDF.m F.m ishdf.m makemovie2d2field.m makemovie2d.m \
makemovie3d.m makemovie3yfxz.m makemovieslicer.m makemovieyfxz.m N.m \
particles_bnd.m particles_mover.m particles_plot.m particles_to_moments.m \
particles_to_rho.m particles_tracer.m perturbCDF.m phasespace_to_moments.m \
phi_to_efield.m picsim2d.m picsim3d.m picsim_init1_2d.m picsim_init1_3d.m \
picsim_init2_2d.m picsim_init2_3d.m picsim_init3_2d.m picsim_init3_3d.m \
plot2dfield.m plot3dfield.m plotiongravity.m plotion.m plotis.m plotphic2d.m \
plotslice2d.m plotslice3d.m plotvector.m P.m randexp.m randflux.m \
randperturb2d.m randperturb.m randrayleigh.m readhdf.m \
rho_to_efield.m R.m rotation.m scheduler2d_def.m scheduler3d_def.m \
scheduler_const.m scheduler_init.m scheduler_par_parsing.m \
scheduler_update.m solver2d.m solver3d.m solve_rho_to_phi.m solver_init.m \
startup.m testdriven2d.m testdriven3d.m testfft2.m testflux.m testperturb.m \
timespec.m tracer_init.m U.m view_particles.m view_scheduler.m

sddir = $(prefix)/matlab/@sd
sd_DATA = @sd/ChangeLog @sd/ChangeLog.0 \
@sd/abs.m @sd/contour.m @sd/contourf.m @sd/ctranspose.m @sd/curl.m \
@sd/display.m @sd/fft.m @sd/fft2.m @sd/get.m @sd/gradient.m @sd/ifft.m \
@sd/imag.m @sd/imagesc.m @sd/log.m @sd/log10.m @sd/loglog.m @sd/max.m \
@sd/mean.m @sd/min.m @sd/minus.m @sd/permute.m @sd/plot.m @sd/plot3.m \
@sd/plus.m @sd/power.m @sd/quiver.m @sd/rdivide.m @sd/real.m @sd/sd.m \
@sd/semilogx.m @sd/semilogy.m @sd/set.m @sd/slice.m @sd/sqrt.m \
@sd/squeeze.m @sd/std.m @sd/subvolume.m @sd/sum.m @sd/times.m \
@sd/transpose.m @sd/uminus.m

singledir = $(prefix)/matlab/@single
single_DATA = @single/eq.m @single/ge.m @single/gt.m @single/le.m \
@single/lt.m @single/minus.m @single/mtimes.m @single/plus.m @single/times.m

EXTRA_DIST = $(matlab_DATA) $(sd_DATA) $(single_DATA)


